--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: esc_pos_utilsx
-description: "A new Flutter package project."
+description: Basic Flutter/Dart classes for ESC/POS printing.
 version: 0.0.1
 homepage: https://github.com/DevelopmentX-Myanmar/esc_pos_utilsx
 
