--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: esc_pos_utilsx
+name: esc_posx_utils
 description: Basic Flutter/Dart classes for ESC/POS printing.
 version: 0.0.1
-homepage: https://github.com/DevelopmentX-Myanmar/esc_pos_utilsx
+homepage: https://github.com/DevelopmentX-Myanmar/esc_posx_utils
 
 environment:
   sdk: ">=3.2.3 <4.0.0"
